large backend refactor, new API interface, small frontend design changes
